--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,43 +1,3 @@
 <resources>
-    <string name="app_name">Matter of Choice</string>
-    <string name="intro">People make countless decisions daily. Are we equipped to make the best choices?</string>
-    <string name="intro_2">What if children, while playing, would gain tools for real life decision making?</string>
-    <string name="intro_3">Usually, we learn from negative consequences. Wouldn’t it be better to learn from virtual failures?</string>
-    <string name="welcomeButton">Continue</string>
-    <string name="greeting">Matter of Choice</string>
-    <string name="greeting2">Have fun</string>
-    <string name="greeting3">Virtual Failures</string>
-    <string name="edit_text_hint">type anything..</string>
-    <string name="sendBtn">sendBtn\n</string>
-    <string name="whatCan">What can I help you with?</string>
-    <string name="choice_1">Choice 1:</string>
-    <string name="choice_2">Choice 2:</string>
-    <string name="choice_3">Choice 3:</string>
-    <string name="choice_4">Choice 4:</string>
-
-    <string-array name="languages">
-        <item>English</item>
-        <item>Arabic</item>
-        <item>Amharic</item>
-        <item>Bengali</item>
-        <item>Chinese Simplified</item>
-        <item>Dutch</item>
-        <item>French</item>
-        <item>German</item>
-        <item>Hebrew</item>
-        <item>Hindi</item>
-        <item>Italian</item>
-        <item>Japanese</item>
-        <item>Korean</item>
-        <item>Portuguese</item>
-        <item>Russian</item>
-        <item>Spanish</item>
-        <item>Turkish</item>
-        <item>Vietnamese</item>
-    </string-array>
-
-    <string-array name="genders">
-        <item>Male</item>
-        <item>Female</item>
-    </string-array>
+    <string name="app_name">matterofchoice</string>
 </resources>
