--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,23 @@
 <resources>
     <string name="app_name">matterofchoice</string>
+    <string-array name="languages">
+        <item>English</item>
+        <item>Arabic</item>
+        <item>Amharic</item>
+        <item>Bengali</item>
+        <item>Chinese Simplified</item>
+        <item>Dutch</item>
+        <item>French</item>
+        <item>German</item>
+        <item>Hebrew</item>
+        <item>Hindi</item>
+        <item>Italian</item>
+        <item>Japanese</item>
+        <item>Korean</item>
+        <item>Portuguese</item>
+        <item>Russian</item>
+        <item>Spanish</item>
+        <item>Turkish</item>
+        <item>Vietnamese</item>
+    </string-array>
 </resources>
